# personal_portfolio_website-builder

./: .gitignore  Cargo.toml  Dioxus.toml  config.toml
.github/workflows/: build_and_publish.yml  publish.yml
content/: _index.md
content/blog/: _index.md
content/contact/: _index.md
content/cv/: _index.md
content/portfolio/: _index.md
content/publications/: _index.md
content/teaching/: _index.md
scripts/: build.sh
src/: main.rs
