[package]
name = "personal-portfolio-website-builder"
version = "0.0.1"
authors = ["Shivanand Pattanshetti <shiva.patt.work@gmail.com>"]
edition = "2021"

[features]
default = []
web = ["dioxus-web"]
prebuild = [    
    "tokio",
    "dioxus-fullstack/axum",
    "dioxus-fullstack/ssr",
    "axum",
]

[dependencies]
dioxus = { version = "0.4" }
dioxus-web = { version = "0.4", features = ["hydrate"], optional = true }
dioxus-fullstack = { version = "0.4", features = ["router",] }
dioxus-router = { version = "0.4" }
axum = { version = "0.6", optional = true }
tokio = { version = "1.29", features = ["full"], optional = true }
serde = "1.0"