[package]
name = "personal-portfolio-website-builder"
version = "0.0.1"
authors = ["Shivanand Pattanshetti <shiva.patt.work@gmail.com>"]
edition = "2021"

[features]
default = []
ssr = ["dep:tokio", "dioxus-fullstack/ssr"]
web = ["dep:dioxus-web"]

[dependencies]
dioxus-web = { version = "*", features = ["hydrate"], optional = true }
dioxus = { version = "*" }
dioxus-fullstack = { version = "*", features = ["router"] }
dioxus-router = { version = "*" }
tokio = { version = "*", features = ["full"], optional = true }
serde = { version = "*" }
