[package]
name = "personal-portfolio-website-builder"
version = "0.0.1"
authors = ["Shivanand Pattanshetti <shiva.patt.work@gmail.com>"]
edition = "2021"

[features]
default = []
ssr = ["dep:tokio", "dioxus-fullstack/ssr"]
web = ["dep:dioxus-web"]

[dependencies]
dioxus = { version = "0.4" }
dioxus-fullstack = { version = "0.4", features = ["router"] }
dioxus-web = { version = "0.4", features = ["hydrate"], optional = true }
dioxus-router = { version = "0.4" }
tokio = { version = "1.32", features = ["full"], optional = true }
serde = { version = "1.0" }
